--- a/demoApp/src/demoApp.mxml
+++ b/demoApp/src/demoApp.mxml
@@ -40,6 +40,7 @@
         public var isSsl:Boolean = false;
 
         private var statusNotConnected:String = "NOT CONNECTED - Press 'Subscribe' Button";
+        private var statusConnecting:String = "Connecting...";
         private var statusConnected:String = "CONNECTED - Press 'Publish' Button";
 
         [Embed(source='../assets/Lock.png')]
@@ -457,7 +458,7 @@
             }
 
             this.subConnectionStatus.setStyle('backgroundColor', "#bbbbbb");
-            labelConnectionStatus.text ="Connecting...";
+            labelConnectionStatus.text = statusConnecting;
         }
 
         private function disconnected(str:String = ""):void {
